fix alignment

--- a/static/css/addCompany.css
+++ b/static/css/addCompany.css
@@ -17,3 +17,11 @@
     src: url('../fonts/TelefonicaWeb-ExtraLight.ttf');
 }
 
+body{
+    text-align: center;
+}
+
+.main{
+    padding: 20% 0 20%;
+}
+
